update my personal webpage

--- a/about.html
+++ b/about.html
@@ -68,12 +68,12 @@
 
 
 
-    <footer id="footer">
-      <div class="container">
-        <div class="row">
-        <p id="copyRightEn"> &copy; 2022 Menglin Wang, All Rights Reserved.</p>
-        <p> <a target="_blank" rel="noopener" href="https://www.mse.cornell.edu/research/grad-students/menglin-wang">My Cornell Webpage</a> | <a target="_blank" rel="noopener" href="http://linkedin.com/in/menglin-wang-b46a891a5">My LinkedIn </a> |  <a target="_blank" rel="noopener" href="mailto:mw976@cornell.edu">E-mail me</a> </p>
-      </div>
-    </footer>
+        <footer id="footer">
+          <div class="container">
+            <div class="row">
+            <p> &copy; 2023 Yonglei Wang, All Rights Reserved.</p>
+            <p> <a target="_blank" rel="noopener" href="https://www.su.se/english/profiles/yonwa-1.187344">My webpage at Stockholm University</a> | <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/yonglei-wang-287469236/">My LinkedIn </a> |  <a target="_blank" rel="noopener" href="mailto:wangyonl@gmail.com">E-mail me</a> </p>
+          </div>
+        </footer>
   </body>
 </html>
