--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         <div class="home" class="home">
           <div class="homelogobackup">
-            <h1><a href="#content" id="logo"><font color="white">Menglin Wang</font></a></h1>
-            <h3><font color="white">MS Student at </font><a href="https://www.mse.cornell.edu"><font color="white">Cornell MSE</font></a></h3>
+            <h1><a href="#content" id="logo"><font color="white">Yonglei Wang</font></a></h1>
+            <h3><font color="white">Researcher at </font><a href="https://www.mse.cornell.edu"><font color="white">Cornell MSE</font></a></h3>
           </div>
           <div class="homelogobackdown">
             <h4><font color="white">Software Engineering and Machine Learning</font></h4>
@@ -61,7 +61,7 @@
         <div class="article-entry">
           <hr>
           <font size=5>
-            <center>Welcome to Menglin Wang's page!</center>
+            <center>Welcome to Yonglei Wang's Personal page!</center>
           </font>
           <font size=1, color="red">
             <hr>
@@ -75,7 +75,7 @@
 
           <font size=3.9, color="black", align = "left">
             <ul>
-            <li><p><font color="black">Hi! My name is Menglin Wang(ch:王梦麟). I am currently a Master student of 
+            <li><p><font color="black">This is Yonglei Wang, an experienced computational scientist, a junior software developer and a passionate xxx. I am working at
               <a target="_blank" rel="noopener" href="https://www.mse.cornell.edu/mse">Materials Engineering</a> and <a href="https://www.cs.cornell.edu">Computer Science</a>
               at <a target="_blank" rel="noopener" href="https://www.cornell.edu/">Cornell University</a>, 
               working with <a target="_blank" rel="noopener" href="https://www.mae.cornell.edu/faculty-directory/jingjie-yeo">JJ Yeo</a>. 
@@ -92,17 +92,15 @@
             </ul>
         </div>
 
+		<footer id="footer">
 
 
-
-      <footer id="footer">
-
-        <div class="container">
-        	<div class="row">
-            <p id="copyRightEn"> &copy; 2022 Menglin Wang, All Rights Reserved.</p>
-            <p> <a target="_blank" rel="noopener" href="https://www.mse.cornell.edu/research/grad-students/menglin-wang">My Cornell Webpage</a> | <a target="_blank" rel="noopener" href="http://linkedin.com/in/menglin-wang-b46a891a5">My LinkedIn </a> |  <a target="_blank" rel="noopener" href="mailto:mw976@cornell.edu">E-mail me</a> </p>
+        <footer id="footer">
+          <div class="container">
+            <div class="row">
+            <p> &copy; 2023 Yonglei Wang, All Rights Reserved.</p>
+            <p> <a target="_blank" rel="noopener" href="https://www.su.se/english/profiles/yonwa-1.187344">My webpage at Stockholm University</a> | <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/yonglei-wang-287469236/">My LinkedIn </a> |  <a target="_blank" rel="noopener" href="mailto:wangyonl@gmail.com">E-mail me</a> </p>
           </div>
-        </div>
-      </footer>
-   </body>
+        </footer>
+  </body>
 </html>
