update my personal webpage

--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
 
         <div class="home" class="home">
           <div class="homelogobackup">
-            <h1><a href="#content" id="logo"><font color="white">Yonglei Wang</font></a></h1>
-            <h3><font color="white">Researcher at </font><a href="https://www.mse.cornell.edu"><font color="white">Cornell MSE</font></a></h3>
+            <h1 style="font-size:15vw><a href="#content" id="logo">
+				<font color="white">Yong-Lei Wang</font></a></h1>
+            <h2><font color="white">Computational Scientist & Software developer</font></h2>
           </div>
-          <div class="homelogobackdown">
-            <h4><font color="white">Software Engineering and Machine Learning</font></h4>
-            <p><a href="https://github.com/MelvinW976?tab=repositories" target="_blank">Github</a></p>
+			<h2><font color="white"><a href="https://www.su.se/department-of-materials-and-environmental-chemistry/">
+				<font color="white">Stockholm University</font></a></font></h2>
+			<h2><font color="white"><a href="https://www.ltu.se/research/subjects/Energiteknik?l=en">
+				<font color="white">Luleå University of Technology</font></a></font></h2>
+          <!--   <div class="homelogobackdown">   -->
+          <!--     <h4><font color="white">Computational Scientist & Software developer</font></h4>   -->
+          <!--     <p><a href="https://github.com/code4yonglei" target="_blank">Github</a></p>   -->
           </div>
         </div>
 
@@ -61,15 +66,14 @@
         <div class="article-entry">
           <hr>
           <font size=5>
-            <center>Welcome to Yonglei Wang's Personal page!</center>
+            <center>Welcome to Yonglei's Personal page!</center>
           </font>
           <font size=1, color="red">
             <hr>
           </font>
 
           <div class="head" align="center">
-            <!-- Source: Jinglin Li -->
-            <img  src="css/img/head.png" height="200" width="200" >
+            <img  src="css/img/sisyphus.jpg" height="200" width="200" >
 
           </div>
 
@@ -99,7 +103,7 @@
           <div class="container">
             <div class="row">
             <p> &copy; 2023 Yonglei Wang, All Rights Reserved.</p>
-            <p> <a target="_blank" rel="noopener" href="https://www.su.se/english/profiles/yonwa-1.187344">My webpage at Stockholm University</a> | <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/yonglei-wang-287469236/">My LinkedIn </a> |  <a target="_blank" rel="noopener" href="mailto:wangyonl@gmail.com">E-mail me</a> </p>
+            <p> <a target="_blank" rel="noopener" href="https://www.su.se/english/profiles/yonwa-1.187344">My webpage @ Stockholm University</a> | <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/yonglei-wang-287469236/">My LinkedIn </a> |  <a target="_blank" rel="noopener" href="mailto:wangyonl@gmail.com">E-mail me</a> </p>
           </div>
         </footer>
   </body>
