--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
           <div class="container">
             <div class="row">
             <p> &copy; 2023 Yonglei Wang, All Rights Reserved.</p>
-            <p> <a target="_blank" rel="noopener" href="https://www.su.se/english/profiles/yonwa-1.187344">My webpage at Stockholm University</a> | <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/yonglei-wang-287469236/">My LinkedIn </a> |  <a target="_blank" rel="noopener" href="mailto:wangyonl@gmail.com">E-mail me</a> </p>
+            <p> <a target="_blank" rel="noopener" href="https://www.su.se/english/profiles/yonwa-1.187344">My webpage @ Stockholm University</a> | <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/yonglei-wang-287469236/">My LinkedIn </a> |  <a target="_blank" rel="noopener" href="mailto:wangyonl@gmail.com">E-mail me</a> </p>
           </div>
         </footer>
   </body>
