--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 
         <div class="home" class="home">
           <div class="homelogobackup">
-            <h1 style="font-size:15vw><a href="#content" id="logo">
-				<font color="white">Yong-Lei Wang</font></a></h1>
-            <h2><font color="white">Computational Scientist & Software developer</font></h2>
+            <h1 style="font-size:10vw><a href="#content" id="logo">
+				<font color="white">Yong-Lei WANG</font></a></h1>
+            <h2 style="font-size:1vw><a href="#content" id="logo">
+				<font color="white">Computational Scientist & Software developer</font></h2>
           </div>
 			<h2><font color="white"><a href="https://www.su.se/department-of-materials-and-environmental-chemistry/">
 				<font color="white">Stockholm University</font></a></font></h2>
@@ -50,14 +51,10 @@
         <div class="intro-navigate">
           <p class="navigater-list" style="font-family:Microsoft YaHei;">
               <a id="beautifont" class="main-nav-link" href="index.html">Hοme</a>
-
               <a id="beautifont" class="main-nav-link" href="about.html">Abοut</a>
-
               <a id="beautifont" class="main-nav-link" href="project.html">Project</a>
-
               <a id="beautifont" class="main-nav-link" href="pub.html">Publication</a>
-
-              <a id="beautifont" class="main-nav-link" href="https://github.coecis.cornell.edu/mw976">Github</a>
+              <a id="beautifont" class="main-nav-link" href="https://github.com/code4yonglei">Github</a>
           </p>
         </div>
 
@@ -65,8 +62,8 @@
 
         <div class="article-entry">
           <hr>
-          <font size=5>
-            <center>Welcome to Yonglei's Personal page!</center>
+          <font size=8>
+            <center>Welcome to Yonglei's Personal Page!</center>
           </font>
           <font size=1, color="red">
             <hr>
@@ -76,6 +73,46 @@
             <img  src="css/img/sisyphus.jpg" height="200" width="200" >
 
           </div>
+
+          <font size=5, color="black", align = "left">
+            <ul>
+            <li><p>
+				<li><p>
+					<font color="black">A <strong>junior software developer</strong>, developing numerical algorithms and professional software using Fortran, C/C++, and Python.
+				</p></li>
+				<li><p>
+					<font color="red">A <strong>professional computational scientist</strong>, holding a Ph. D. degree in Physical Chemistry and working on the interface of theoretical chemistry, computational physics, and materials science to support characterization, discovery and design of functional materials $via$ multiscale modelling assisted with machine learning approaches.
+				</p></li>
+				<li><p>
+					<font color="green">A <strong>self-motivated and passionate team player</strong>, being active and flexible in collaborative projects and have a high efficiency for the management of individial tasks.
+				</p></li>
+			</p></li>
+            <li><p><font color="black"> I am passionate with cross-disciplinary research, especially skilled in the field of <strong>Software Development</strong> and <strong>Machine Learning</strong>.
+              And I am corrently seeking for a new-graduation position of <strong>Software Development Engineer</strong> (refer to my <a href="about.html">About</a> for more SWE skills).</a>.</p>
+            </li>
+            <li><p><font color="black"><strong>Feel free to <a target="_blank" rel="noopener" href="mailto:mw976@cornell.edu">reach out</a>.</p>
+            </li>
+            <li><p><a href="img/Menglin Wang-CV.pdf">Curriculum Vitae</a>.</p>
+            </li>
+            </ul>
+        </div>
+
+		<footer id="footer">
+
+
+        <footer id="footer">
+          <div class="container">
+            <div class="row">
+            <p> &copy; 2023 Yonglei Wang, All Rights Reserved.</p>
+            <p> <a target="_blank" rel="noopener" href="https://www.su.se/english/profiles/yonwa-1.187344">My webpage @ Stockholm University</a> | <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/yonglei-wang-287469236/">My LinkedIn </a> | <a target="_blank" rel="noopener" href="mailto:wangyonl@gmail.com">E-mail me</a> </p>
+          </div>
+        </footer>
+  </body>
+</html>
+
+
+
+<!--
 
           <font size=3.9, color="black", align = "left">
             <ul>
@@ -94,17 +131,6 @@
             <li><p><a href="img/Menglin Wang-CV.pdf">Curriculum Vitae</a>.</p>
             </li>
             </ul>
-        </div>
-
-		<footer id="footer">
 
 
-        <footer id="footer">
-          <div class="container">
-            <div class="row">
-            <p> &copy; 2023 Yonglei Wang, All Rights Reserved.</p>
-            <p> <a target="_blank" rel="noopener" href="https://www.su.se/english/profiles/yonwa-1.187344">My webpage @ Stockholm University</a> | <a target="_blank" rel="noopener" href="https://www.linkedin.com/in/yonglei-wang-287469236/">My LinkedIn </a> |  <a target="_blank" rel="noopener" href="mailto:wangyonl@gmail.com">E-mail me</a> </p>
-          </div>
-        </footer>
-  </body>
-</html>
+-->
