update my personal webpage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Yonglei's Personal Website</title>
-		<link rel="stylesheet" href="assets/css/homo.css">
+		<link rel="stylesheet" href="assets/css/index.css">
 		<link rel="icon" href="assets/img/sisyphus.jpg">
 	</head>
 
@@ -45,7 +45,7 @@
 
 			<div class="intro-navigate">
 				<p class="navigater-list" style="font-family:Microsoft YaHei;">
-					<a id="beautifont" class="main-nav-link" href="home.html">Hοme</a>
+					<a id="beautifont" class="main-nav-link" href="index.html">Hοme</a>
 					<a id="beautifont" class="main-nav-link" href="project.html">Project</a>
 					<a id="beautifont" class="main-nav-link" href="pub.html">Publication</a>
 					<a id="beautifont" class="main-nav-link" href="https://github.com/code4yonglei">Github</a>
