--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
 					<a id="beautifont" class="main-nav-link" href="index.html">Hοme</a>
 					<a id="beautifont" class="main-nav-link" href="project.html">Project</a>
 					<a id="beautifont" class="main-nav-link" href="pub.html">Publication</a>
-					<a id="beautifont" class="main-nav-link" href="https://github.com/code4yonglei">Github</a>
+					<a id="beautifont" class="main-nav-link" href="xxx_yonglei_0212_0000.html">Github</a>
 				</p>
 			</div>
 		</header>
-
-
-
+					<!-- <a id="beautifont" class="main-nav-link" href="https://github.com/code4yonglei">Github</a> --> 
 
 
 		<div class="outer">
