--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 			<div class="intro-navigate">
 				<p class="navigater-list" style="font-family:Microsoft YaHei;">
 					<a id="beautifont" class="main-nav-link" href="index.html">Hοme</a>
-					<a id="beautifont" class="main-nav-link" href="project.html">Project</a>
-					<a id="beautifont" class="main-nav-link" href="pub.html">Publication</a>
-					<a id="beautifont" class="main-nav-link" href="xxx_yonglei_0212_0000.html">Github</a>
+					<a id="beautifont" class="main-nav-link" href="pub.html">Research/Projects/Publictions</a>
+					<a id="beautifont" class="main-nav-link" href="blog_list.html">Blogs/Codes</a>
+					<a id="beautifont" class="main-nav-link" href="blog_archive.html">Archives</a>
 				</p>
 			</div>
 		</header>
