--- a/blog_list.html
+++ b/blog_list.html
@@ -1313,7 +1313,7 @@
 							</span>
 						</div>
 					</div>  
-					<script>
+					<!--<script>
 						var methods = JSON.parse("[{\"typeString\":\"Hi There,I am \\u003cstrong\\u003eCalvin Haynes!\\u003c/strong\\u003e\"},{\"pauseFor\":2500},{\"deleteChars\":14},{\"typeString\":\"\\u003cstrong\\u003ea guitar lover!\\u003c/strong\\u003e\"},{\"pauseFor\":2500},{\"deleteChars\":15},{\"typeString\":\"\\u003cstrong\\u003ea CS Lover!\\u003c/strong\\u003e\"},{\"pauseFor\":2500},{\"deleteChars\":11},{\"typeString\":\"\\u003cstrong\\u003ea geek!\\u003c/strong\\u003e\"},{\"pauseFor\":2500},{\"deleteChars\":16}]");
 						var options = JSON.parse("{\"autoStart\":false,\"loop\":true}");
 						var typeElem = document.getElementById("typewriter");
@@ -1335,8 +1335,9 @@
 						  }
 						}
 						typewriter.start();
-					</script>  
+					</script>-->
 				</header>
+
 
 
 <!----------------------- 1345 body的头部设置结束 ------------------------>
@@ -1360,7 +1361,7 @@
 			<article class="summary-classic" data-ani="true">
 				<div class="summary-classic__flex-box">
 					<div class="summary-classic__image-container summary-classic__image-wrapper" data-position="right" data-hwm="">
-						<a href="blog_page.html">
+						<a href="https://code4yonglei.github.io/yonglei.github.io/blog_page.html">
 							<img data-src="https://images.ctfassets.net/26961o1141cc/4kFsbk5TReaEs0OEDXfJhm/ee28447fe8579be9e32d1c1e7b8abdac/header_computers.png?w=1200&amp;h=500&amp;fm=webp&amp;q=100" alt="计算机名词解释百科全书" src="assets/blog_list/header_computers.webp" class="summary-classic__image lazyloaded" data-ani="true" data-hwm="" style="">
 						</a>
 					</div>
@@ -1390,14 +1391,14 @@
 			<article class="summary-classic" data-ani="true">
 				<div class="summary-classic__flex-box">
 					<div class="summary-classic__image-container summary-classic__image-wrapper" data-position="right" data-hwm="">
-						<a href="https://blog.calvinhaynes.top/posts/%E6%8F%90%E9%97%AE%E7%9A%84%E6%99%BA%E6%85%A7/">
+						<a href="https://code4yonglei.github.io/yonglei.github.io/blog_page.html">
 							<img data-src="https://tarsgo.aylp.com.cn/CalvinHaynesImageHub/ImageHub/Wallpaper/%e6%8f%90%e9%97%ae%e7%9a%84%e6%99%ba%e6%85%a7.5s5f7av1pkg0.jpg" alt="提问的智慧" src="assets/blog_list/%E6%8F%90%E9%97%AE%E7%9A%84%E6%99%BA%E6%85%A7.5s5f7av1pkg0.jpg" class="summary-classic__image lazyloaded" data-ani="true" data-hwm="" style="">
 						</a>
 					</div>
 					<div class="summary-classic__content">
 						<header>
 							<h5 class="title h5">
-								<a href="https://blog.calvinhaynes.top/posts/%E6%8F%90%E9%97%AE%E7%9A%84%E6%99%BA%E6%85%A7/">提问的智慧
+								<a href="https://code4yonglei.github.io/yonglei.github.io/blog_page.html">提问的智慧
 								</a>
 							</h5>
 							<br>
@@ -1421,14 +1422,14 @@
 			<article class="summary-classic" data-ani="true">
 				<div class="summary-classic__flex-box">
 					<div class="summary-classic__image-container summary-classic__image-wrapper" data-position="right" data-hwm="">
-						<a href="https://blog.calvinhaynes.top/posts/hugo%E6%90%AD%E5%BB%BA%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%E6%95%99%E7%A8%8B/">
+						<a href="https://code4yonglei.github.io/yonglei.github.io/blog_page.html">
 							<img data-src="https://tarsgo.aylp.com.cn/CalvinHaynesImageHub/ImageHub/Wallpaper/wallpaper-3-type.png" alt="Hugo搭建个人博客教程" src="data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath fill='none' d='M0 0h24v24H0V0z'/%3E%3Cpath fill='%23aaa' d='M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-1 16H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v12c0 .55-.45 1-1 1zm-4.44-6.19l-2.35 3.02-1.56-1.88c-.2-.25-.58-.24-.78.01l-1.74 2.23c-.26.33-.02.81.39.81h8.98c.41 0 .65-.47.4-.8l-2.55-3.39c-.19-.26-.59-.26-.79 0z'/%3E%3C/svg%3E" class="lazyload summary-classic__image" data-ani="true" data-hwm="" style="">
 						</a>
 					</div>
 					<div class="summary-classic__content">
 						<header>
 							<h5 class="title h5">
-								<a href="https://blog.calvinhaynes.top/posts/hugo%E6%90%AD%E5%BB%BA%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%E6%95%99%E7%A8%8B/">Hugo搭建个人博客教程
+								<a href="https://code4yonglei.github.io/yonglei.github.io/blog_page.html">Hugo搭建个人博客教程
 								</a>
 							</h5>
 							<h6 class="subtitle caption">
@@ -1494,7 +1495,7 @@
 				</div>
 				dream -->
 				<div class="bio__photo-wrapper"">
-					<img alt="BlackJack" src="sisyphus.jpg" class="bio__photo ls-is-cached lazyloaded" data-ani="true">
+					<img alt="BlackJack" src="assets/img/sisyphus.jpg" class="bio__photo ls-is-cached lazyloaded" data-ani="true">
 				</div>
 				<!-- 我是
 				<div class="about-text">
@@ -1712,7 +1713,7 @@
 var a_idx = 0;
 jQuery(document).ready(function($) {
     $("body").click(function(e) {
-        var a = new Array("CalvinHaynes","Guitar","Hugo","CSAPP","Java","Python");
+        var a = new Array("BlackJack","Programming","C/C++","Python","Fortran","Julia");
 		var $i = $("<span />").text(a[a_idx]);
         a_idx = (a_idx + 1) % a.length;
         var x = e.pageX,
