--- a/blog_archive.html
+++ b/blog_archive.html
@@ -1298,27 +1298,17 @@
 								</div>
 							</div>
 						</div>
-						<a href="https://blog.calvinhaynes.top/about/" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">HOME</a>
-						<a href="https://blog.calvinhaynes.top/friends/" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Research/Projects/Publictions</a>
-						<a href="https://blog.calvinhaynes.top/archive/" class="navbar__menu-item navbar__slide-down active" dir="ltr" data-ani="true" target="_blank">Blogs/Codes</a>
-						<a href="https://blog.calvinhaynes.top/showcase/" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Archives</a>
+						<a href="index.html" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">HOME</a>
+						<a href="pub.html" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Research/Projects/Publictions</a>
+						<a href="blog_list.html" class="navbar__menu-item navbar__slide-down" dir="ltr" data-ani="true" target="_blank">Blogs/Codes</a>
+						<a href="blog_archive.html" class="navbar__menu-item navbar__slide-down active" dir="ltr" data-ani="true" target="_blank">Archives</a>
 					</div>
 				</nav>
 				<header class="header basicflex-column">
 					<h3 class="h3 terms__title">
-						Archives/Blogs
+						Archives/Blogs/Codes
 					</h3>
 				</header>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1363,7 +1353,7 @@
 									<span class="archive__type">posts</span>
 									<span class="archive__date">02-09</span>
 								</span>
-								<a href="https://blog.calvinhaynes.top/posts/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%90%8D%E8%AF%8D%E8%A7%A3%E9%87%8A%E7%99%BE%E7%A7%91%E5%85%A8%E4%B9%A6/" class="archive__title" data-title-wrap="wrap" data-dir="ltr">计算机名词百科全书</a>        
+								<a href="https://code4yonglei.github.io/yonglei.github.io/blog_page.html" class="archive__title" data-title-wrap="wrap" data-dir="ltr">计算机名词百科全书</a>        
 							</li>
 						</ul>
 					
@@ -1374,14 +1364,14 @@
 									<span class="archive__type">posts</span>
 									<span class="archive__date">02-06</span>
 								</span>
-								<a href="https://blog.calvinhaynes.top/posts/%E6%8F%90%E9%97%AE%E7%9A%84%E6%99%BA%E6%85%A7/" class="archive__title" data-title-wrap="wrap" data-dir="ltr">提问智慧</a>        
+								<a href="https://code4yonglei.github.io/yonglei.github.io/blog_page.html" class="archive__title" data-title-wrap="wrap" data-dir="ltr">提问智慧</a>        
 							</li>
 							<li class="archive__li" data-dir="ltr">
 								<span class="archive__meta" data-ani="true">
 									<span class="archive__type">posts</span>
 									<span class="archive__date">01-21</span>
 								</span>
-								<a href="https://blog.calvinhaynes.top/posts/%E4%B8%80%E6%96%87%E6%95%99%E4%BD%A0%E7%8E%A9%E8%BD%ACgit%E5%92%8Cgithub/" class="archive__title" data-title-wrap="wrap" data-dir="ltr">玩转Git和Github</a> 
+								<a href="https://code4yonglei.github.io/yonglei.github.io/blog_page.html" class="archive__title" data-title-wrap="wrap" data-dir="ltr">玩转Git和Github</a> 
 							</li>
 						</ul>
 
@@ -1392,14 +1382,14 @@
 									<span class="archive__type">posts</span>
 									<span class="archive__date">11-16</span>
 								</span>
-								<a href="https://blog.calvinhaynes.top/posts/%E5%9F%BA%E4%BA%8Edocker%E7%9A%84hadoop%E9%9B%86%E7%BE%A4%E9%85%8D%E7%BD%AEspark%E5%B9%B6%E7%AE%80%E5%8D%95%E4%BD%BF%E7%94%A8/" class="archive__title" data-title-wrap="wrap" data-dir="ltr">基于Docker的Hadoop集群配置Spark并简单使用</a>        
+								<a href="https://code4yonglei.github.io/yonglei.github.io/blog_page.html" class="archive__title" data-title-wrap="wrap" data-dir="ltr">基于Docker的Hadoop集群配置Spark并简单使用</a>        
 							</li>
 							<li class="archive__li" data-dir="ltr">
 								<span class="archive__meta" data-ani="true">
 									<span class="archive__type">posts</span>
 									<span class="archive__date">08-05</span>
 								</span>
-								<a href="https://blog.calvinhaynes.top/posts/hugo%E6%90%AD%E5%BB%BA%E4%B8%AA%E4%BA%BA%E5%8D%9A%E5%AE%A2%E6%95%99%E7%A8%8B/" class="archive__title" data-title-wrap="wrap" data-dir="ltr">Hugo搭建个人博客教程</a>
+								<a href="https://code4yonglei.github.io/yonglei.github.io/blog_page.html/" class="archive__title" data-title-wrap="wrap" data-dir="ltr">Hugo搭建个人博客教程</a>
 							</li>
 						</ul>
 					</div>
@@ -1471,17 +1461,6 @@ jQuery(document).ready(function($) {
 	});
 });
 </script>
-<!--<script defer="defer" type="text/javascript">
- var OriginTitle = document.title;
- document.addEventListener('visibilitychange', function () {
-     if (document.hidden) {
-         document.title = '别走啊，官人 _(:з」∠)_';
-     }
-     else {
-         document.title = OriginTitle;
-     }
- });
-</script>-->
 <script defer="defer" src="11_blog_list_files/instantpage.min.js" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
 
 
