--- a/blog_list.html
+++ b/blog_list.html
@@ -1300,8 +1300,8 @@
 						</div>
 						<a href="index.html" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">HOME</a>
 						<a href="pub.html" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Research/Projects/Publictions</a>
-						<a href="blog_list.html" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Blogs/Codes</a>
-						<a href="https://blog.calvinhaynes.top/showcase/" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Archives</a>
+						<a href="blog_list.html" class="navbar__menu-item navbar__slide-down active" dir="ltr" data-ani="true" target="_blank">Blogs/Codes</a>
+						<a href="blog_archive" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Archives</a>
 					</div>
 				</nav>
 				<header class="header ">
