--- a/blog_page.html
+++ b/blog_page.html
@@ -1299,10 +1299,10 @@
 								</div>
 							</div>
 						</div>
-						<a href="https://blog.calvinhaynes.top/about/" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">HOME</a>
-						<a href="https://blog.calvinhaynes.top/friends/" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Research/Projects/Publictions</a>
-						<a href="https://blog.calvinhaynes.top/archive/" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Blogs/Codes</a>
-						<a href="https://blog.calvinhaynes.top/showcase/" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Archives</a>
+						<a href="index.html" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">HOME</a>
+						<a href="pub.html" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Research/Projects/Publictions</a>
+						<a href="blog_list.html" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Blogs/Codes</a>
+						<a href="blog_archive.html" class="navbar__menu-item navbar__slide-down " dir="ltr" data-ani="true" target="_blank">Archives</a>
 					</div>
 				</nav>
 
