--- a/_posts/main/projects.html
+++ b/_posts/main/projects.html
@@ -11,10 +11,10 @@
 		<header id="header">
 			<div class="intro-navigate">
 				<p class="navigater-list" style="font-family:Microsoft YaHei;">
-					<a id="beautifont" class="main-nav-link" href="home.html">Hοme</a>
-					<a id="beautifont" class="main-nav-link" href="project.html">Project</a>
-					<a id="beautifont" class="main-nav-link" href="pub.html">Publication</a>
-					<a id="beautifont" class="main-nav-link" href="https://github.com/code4yonglei">Github</a>
+					<a id="beautifont" class="main-nav-link" href="index.html">Hοme</a>
+					<a id="beautifont" class="main-nav-link" href="_posts/main/pub.html">Research/Projects/Publictions</a>
+					<a id="beautifont" class="main-nav-link" href="_posts/main/blog_list.html">Blogs/Codes</a>
+					<a id="beautifont" class="main-nav-link" href="_posts/main/blog_archive.html">Archives</a>
 				</p>
 			</div>
 		</header>
